Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

02-January-2011 Christophe Demko
 # [#24068] Remove BitFolge library from SQL (Michael Babker)
 # [#23937] Fix some uses of JPATH_ROOT when there is a better alternative (Rouven Weßling)

01-January-2011 Christophe Demko
 # [#24010] Error Message Missing for Image Upload (Janich Rasmussen)

01-January-2011 Jean-Marie Simonet
 # [#24055] Disabled languages display as choice in users params. Thanks Christophe.
 # [#24057] New CSS Needed for Private Messages in Bluestork
 # [#24061] Beez5 uses position-01 instead of position-1 in one location. Thanks Elin.
 # [#24058] Beez5 parameter problem. Thanks Elin and Christophe.
 # [#24028] Can't bulk delete users. Thanks Christophe.
 # [#23849] Toolbar images are not properly centered over their text in IE8 - Bluestork. Thanks Bill.
 #$ Allowing translation of PHPMAILER lang strings + correcting some strings values.

31-Dec-2010 Christophe Demko
 # [#24043] In Chrome, the pagination buttons are misaligned in admin Hathor plus remove duplicate css (Andrea Tarr)
 # [#24018] Alternate date format performing unexpectedly at category view/list layout (bill richardson)
 # [#23895] Correction on the default assets table data in joomla.sql (Sander Potjer)
 # [#23897] Bug in profile edition on admin side (pooja raju)
 # [#23972] Category List does not show non-empty subcategories (bill richardson)

30-Dec-2010 Christophe Demko
 # [#23969] parameter $namespace is obsolete in JRegistry::toString
 # [#23667] Extension Manager: Manage screen does not update version number (Samuel Moffatt)
 # [#23701] joomla.installer.adapters.library does not accomodate media tag (Samuel Moffatt, Michael Richey)
 # [#23808] JToolBar is adding paths in the wrong order (Elin Waring, Ian MacLennan)